<resources>
    <string name="app_name">FoundationPortableReader</string>
    <string name="bottom_nav_reader">Reader</string>
    <string name="bottom_nav_input">Import</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="input_fragment_hint">Enter article ids line by line</string>
    <string name="input_fragment_button_text">Import</string>
    <string name="toast_message">Imported: successful: %1$s, errors: %2$s</string>
    <string name="empty_input_error">Empty input</string>
    <string name="articles_import_progress_text">
        Processing: %1$s…
        \nFetched: %2$d
        \nImported: %3$d
        \nFailed: %4$d
        \nTotal: %5$d
    </string>
    <string name="cancel_button">Cancel</string>
    <string name="importing_articles">Importing articles...</string>
    <string name="change_home_folder_btn">Change home folder</string>
    <string name="bundle_registries_title">Bundle Registries</string>
    <string name="add_registry_btn">Add Registry</string>
    <string name="edit_registry_title">Edit Registry</string>
    <string name="add_registry_title">Add Registry</string>
    <string name="registry_url_hint">https://example.com/registry.json</string>
    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="aaa">aaa</string>
    <string name="bottom_nav_bundles">Bundles</string>
    <string name="bundle_no_description">No description</string>
</resources>